--- a/ios/7.23.0/manifest-7.23.0.plist
+++ b/ios/7.23.0/manifest-7.23.0.plist
@@ -11,7 +11,7 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>https://github.com/zalopay-samples/test-wallets/raw/main/ios/zalopay-7.23.0.ipa</string>
+						<string>https://github.com/zalopay-samples/test-wallets/raw/main/ios/7.23.0/ZaloPay_iOS_7.23.0.ipa</string>
 					</dict>
 					<dict>
 						<key>kind</key>
